@@ -9,6 +9,12 @@ What's New in Python 2.7.3?
 Core and Builtins
 -----------------
 
+- Issue #12149: Update the method cache after a type's dictionnary gets
+  cleared by the garbage collector.  This fixes a segfault when an instance
+  and its type get caught in a reference cycle, and the instance's
+  deallocator calls one of the methods on the type (e.g. when subclassing
+  IOBase).  Diagnosis and patch by Davide Rizzo.
+
 - Issue #12501: Adjust callable() warning: callable() is only not supported in
   Python 3.1. callable() is again supported in Python 3.2.
 
